tests/unit/guardrails/disallow-latest-tag/kyverno-test.yaml
name: disallow-latest-tag-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    resource: good-pod
    kind: Pod
    result: pass
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    resource: bad-pod-latest-tag
    kind: Pod
    result: fail
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    resource: bad-pod-latest-init-container
    kind: Pod
    result: fail
